infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
        editor: vscode
    spec:
      containers:
      - name: comments
        image: samdtech/comments
---
kind: Service
apiVersion: v1
metadata:
  name:  comments-srv
spec:
  selector:
    app: comments
  type:  ClusterIP
  ports:
  - name:  comments
    protocol: TCP
    port:  4001
    targetPort:  4001
