infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
        editor: vscode
    spec:
      containers:
      - name: posts
        image: samdtech/posts
---
kind: Service
apiVersion: v1
metadata:
  name:  posts-clusterip-srv
spec:
  selector:
    app: posts
  type:  ClusterIP
  ports:
  - name:  posts
    protocol: TCP
    port:  4000
    targetPort:  4000
