infra/k8s/posts-srv.yaml
kind: Service
apiVersion: v1
metadata:
  name: posts-srv
spec:
  selector:
    app: posts
  type: NodePort
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
